clang/test/BSC/Negative/NullabilityCheck/nonnull_assigned_by_nullable_ptr/nullable_ptr_get_from_addrderef.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Safe void foo(void) {
    int *_Borrow _Nullable ptr = nullptr;
    int *_Borrow cref1 = ptr;  // expected-error {{nonnull pointer cannot be assigned by nullable pointer}}
    int *_Borrow cref = &_Mut *ptr;  // expected-error {{nonnull pointer cannot be assigned by nullable pointer}}
    return;
}
_Safe void consume(int *_Owned _Nullable);

_Safe void ternary_borrow(_Bool flag, int *_Owned _Nullable p, int *_Owned _Nullable q) {
    int *_Borrow ref = &_Mut*(1 ? p : q);  // expected-error {{nonnull pointer cannot be assigned by nullable pointer}}
    consume(p);
    consume(q);
}

_Safe void ternary_borrow2(_Bool flag, int *_Owned p, int *_Owned _Nullable q) {
    int *_Borrow ref = &_Mut*(1 ? p : q);  // expected-error {{nonnull pointer cannot be assigned by nullable pointer}}
    consume(p);
    consume(q);
}
